Created a menu layout to populate bottom navigation View in main activity

--- a/4-application/app/src/main/res/values/strings.xml
+++ b/4-application/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">PrayerPal</string>
+    <string name="prayers_nav_title">Prayer</string>
+    <string name="qibla_nav_title">Qibla</string>
+    <string name="tracker_nav_title">Tracker</string>
+    <string name="dua_nav_title">Dua\'s</string>
 </resources>
