Created 2 new methods in MainActivity that will change the fragment container on bottom navigation item selection. Created a blank tracker fragment

--- a/4-application/app/src/main/res/values/strings.xml
+++ b/4-application/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="qibla_nav_title">Qibla</string>
     <string name="tracker_nav_title">Tracker</string>
     <string name="dua_nav_title">Dua\'s</string>
+    
+    <string name="hello_blank_fragment">This is the Tracker Fragment!</string>
 </resources>
