Created boiler plate fragments and linked them to the bottom navigation.

--- a/4-application/app/src/main/res/values/strings.xml
+++ b/4-application/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="qibla_nav_title">Qibla</string>
     <string name="tracker_nav_title">Tracker</string>
     <string name="dua_nav_title">Dua\'s</string>
-    
-    <string name="hello_blank_fragment">This is the Tracker Fragment!</string>
+
+    <string name="hello_fragment_qibla">This is the Qibla Fragment!</string>
+    <string name="hello_fragment_tracker">This is the Tracker Fragment!</string>
+    <string name="hello_fragment_dua">This is the Dua Fragment!</string>
 </resources>
