--- a/4-application/app/src/main/res/values/strings.xml
+++ b/4-application/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="tracker_nav_title">Tracker</string>
     <string name="dua_nav_title">Dua\'s</string>
 
+    <string name="sv_hint">Search for your city...</string>
+
     <string name="hello_fragment_qibla">This is the Qibla Fragment!</string>
     <string name="hello_fragment_tracker">This is the Tracker Fragment!</string>
     <string name="hello_fragment_dua">This is the Dua Fragment!</string>
