--- a/4-application/app/src/main/res/values/strings.xml
+++ b/4-application/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
 
     <string name="back_tv">Back</string>
     <string name="sv_hint">Search for your city...</string>
+    <string name="current_location_txt">Use my current location</string>
 
     <string name="hello_fragment_qibla">This is the Qibla Fragment!</string>
     <string name="hello_fragment_tracker">This is the Tracker Fragment!</string>
