--- a/4-application/app/src/main/res/values/strings.xml
+++ b/4-application/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="hello_fragment_qibla">This is the Qibla Fragment!</string>
     <string name="hello_fragment_tracker">This is the Tracker Fragment!</string>
     <string name="hello_fragment_dua">This is the Dua Fragment!</string>
+
+    <string name="return_btn_text">Return back to safety</string>
 </resources>
