Created another fragment to display dua detail. Followed Figma wireframe

--- a/4-application/app/src/main/res/values/strings.xml
+++ b/4-application/app/src/main/res/values/strings.xml
@@ -17,5 +17,9 @@
     <string name="maghrib_text">Maghrib</string>
     <string name="isha_text">Isha</string>
 
+    <string name="arabic_tv">Arabic</string>
+    <string name="transliteration_tv">Transliteration</string>
+    <string name="meaning_tv">Meaning</string>
+
     <string name="return_btn_text">Return back to safety</string>
 </resources>
