Designing qibla fragment layout by following wireframe

--- a/4-application/app/src/main/res/values/strings.xml
+++ b/4-application/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="ma_current_location_txt">Use my current location</string>
 
 <!--    Qibla Frag Layout-->
-    <string name="hello_fragment_qibla">This is the Qibla Fragment!</string>
+    <string name="location_txt">Location</string>
 
 <!--    Tracker Frag Layout-->
     <string name="tf_fajr_text">Fajr</string>
