Moved getting qibla bearing to its own method. Added a TextView and RadioButton to fragment to set that invisible by default. Setting them to vibile when user is facing towards the qibla

--- a/4-application/app/src/main/res/values/strings.xml
+++ b/4-application/app/src/main/res/values/strings.xml
@@ -11,7 +11,8 @@
     <string name="ma_current_location_txt">Use my current location</string>
 
 <!--    Qibla Frag Layout-->
-    <string name="location_txt">Location</string>
+    <string name="qf_location_txt">Location</string>
+    <string name="qf_facing_qibla">You\'re facing the <b>Qibla</b></string>
 
 <!--    Tracker Frag Layout-->
     <string name="tf_fajr_text">Fajr</string>
